--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,8 +46,12 @@ body {
   font-weight:600;
 }
 
+nav{
+  height: 4em;
+}
+
 section{
-padding: 0.5em 1em 2em 1em;
+padding: 0.3em 1em 1.7em 1em;
 }
 
 @keyframes fade-in {
